// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxi05ns {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxi05ns:focus,
.sxi05ns:hover {
  color: var(--sx-colors-primaryMid);
  text-decoration: underline;
}

.sxi05ns:active {
  color: var(--sx-colors-primaryDark);
}

.sx8yt8k > .sxi05ns,
.sx8wio2 > .sxi05ns,
.sx03kze > .sxi05ns {
  font-size: 100%;
  line-height: 1;
}

.sx8yt8k > .sxi05ns::before,
.sx8yt8k > .sxi05ns::after,
.sx8wio2 > .sxi05ns::before,
.sx8wio2 > .sxi05ns::after,
.sx03kze > .sxi05ns::before,
.sx03kze > .sxi05ns::after {
  content: none;
}

.sxi05ns8bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxi05ns8bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxi05ns8bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sxi05ns sxi05ns8bitc--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxi05ns {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxi05ns:focus,
.sxi05ns:hover {
  color: var(--sx-colors-primaryMid);
  text-decoration: underline;
}

.sxi05ns:active {
  color: var(--sx-colors-primaryDark);
}

.sx8yt8k > .sxi05ns,
.sx8wio2 > .sxi05ns,
.sx03kze > .sxi05ns {
  font-size: 100%;
  line-height: 1;
}

.sx8yt8k > .sxi05ns::before,
.sx8yt8k > .sxi05ns::after,
.sx8wio2 > .sxi05ns::before,
.sx8wio2 > .sxi05ns::after,
.sx03kze > .sxi05ns::before,
.sx03kze > .sxi05ns::after {
  content: none;
}

.sxi05ns8bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxi05ns8bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxi05ns8bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxi05nspfvfy--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxi05nspfvfy--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxi05nspfvfy--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxi05ns sxi05nspfvfy--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
